# zhangtuo

./: README.md  git.txt  zhangsen.xlsx  zhangsen2zhangtuo.xlsx  zhangtuo.xlsx  ~$zhangsen.xlsx  项目计划.xlsx
work/cmake/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Demo  Makefile  cmake_install.cmake  install_manifest.txt  main.cc
work/cmake/Testing/Temporary/: CTestCostData.txt
work/cmake/dependency/: compiler.sh  geos-3.7.1.tar.bz2.1
work/cmake/dependency/geos-3.7.1/: Makefile  config.status  libtool
work/cmake/dependency/geos-3.7.1/capi/: Makefile  libgeos_c.la  libgeos_c_la-geos_c.lo  libgeos_c_la-geos_ts_c.lo
work/cmake/dependency/geos-3.7.1/capi/.deps/: libgeos_c_la-geos_c.Plo  libgeos_c_la-geos_ts_c.Plo
work/cmake/dependency/geos-3.7.1/capi/.libs/: libgeos_c.lai
work/cmake/dependency/geos-3.7.1/doc/: Makefile  example
work/cmake/dependency/geos-3.7.1/doc/.deps/: example.Po
work/cmake/dependency/geos-3.7.1/doc/.libs/: example
work/cmake/dependency/geos-3.7.1/include/: Makefile
work/cmake/dependency/geos-3.7.1/include/geos/: Makefile
work/cmake/dependency/geos-3.7.1/macros/: Makefile
work/cmake/dependency/geos-3.7.1/src/: Makefile  inlines.lo  libgeos.la
work/cmake/dependency/geos-3.7.1/src/io/: Makefile  (+12 more)
work/cmake/dependency/geos-3.7.1/swig/: Makefile
work/cmake/dependency/geos-3.7.1/tests/: Makefile
work/cmake/dependency/geos-3.7.1/tools/: Makefile
work/cmake/dependency/lib/: libgeos-3.7.1.dylib  libgeos_c.1.dylib
work/cmake/math/: CMakeLists.txt  Makefile  cmake_install.cmake
(+760 files in other folders)
